k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-list-frontend
  namespace: shopping-list
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-list-frontend
  template:
    metadata:
      labels:
        app: shopping-list-frontend
    spec:
      imagePullSecrets:
        - name: registry-usv-twa-project
      containers:
        - name: frontend
          image: registry.digitalocean.com/usv-twa-project/shopping-list-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-list-frontend
  namespace: shopping-list
spec:
  type: ClusterIP
  selector:
    app: shopping-list-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
