k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-list
  namespace: shopping-list
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mihail-musteata.mibo.monster
  rules:
    - host: mihail-musteata.mibo.monster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-list-frontend
                port:
                  number: 80
